templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: argocd
  annotations:
      kubernetes.io/ingress.class: "nginx"
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - awesome-cats.767397887597.realhandsonlabs.net
    secretName: tls-secret
  rules:
  - host: "awesome-cats.767397887597.realhandsonlabs.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: myapp-backend
            port:
              number: 80
